--- a/EmployeeLogin/web/employeeProfile.xhtml
+++ b/EmployeeLogin/web/employeeProfile.xhtml
@@ -56,7 +56,7 @@
                             <h:panelGrid class="info" columns="2">
                                 
                                 <h:outputText value="Employee Email:  " />
-                                <h:outputText value ="#{empRecordObj.username}" />
+                                <h:outputText value ="#{empRecordObj.email}" />
                                 
                             </h:panelGrid>
                             <div id="edit">    
