--- a/EmployeeLogin/web/index.xhtml
+++ b/EmployeeLogin/web/index.xhtml
@@ -11,8 +11,8 @@
             <div class="title">Waystone Property Management</div>
             <div class="shadowBox">
                 <h3> Employee Login</h3>
-                <h:outputText value="Username" />
-                <h:inputText id="username" value="#{employee.username}"> </h:inputText>
+                <h:outputText value="Email" />
+                <h:inputText id="username" value="#{employee.email}"> </h:inputText>
                 <h:message for="username"> </h:message>
                 <br></br><br></br>
             
