tenant search is working, started tenant payments

--- a/EmployeeLogin/web/employeeProfile.xhtml
+++ b/EmployeeLogin/web/employeeProfile.xhtml
@@ -59,8 +59,11 @@
                                 <h:outputText value ="#{empRecordObj.email}" />
                                 
                             </h:panelGrid>
-                            <div id="edit">    
+                            <div class="edit">    
                                 <h:commandButton value="Edit Information" action="employeeProfileEdit" />
+                            </div>
+                            <div class="edit">
+                                <h:commandButton value="Edit Password" action="employeePasswordEdit" />
                             </div>
                         </div>
                         
