--- a/EmployeeLogin/web/index.xhtml
+++ b/EmployeeLogin/web/index.xhtml
@@ -4,6 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <h:outputStylesheet name="waystoneEmployee.css" library="css" />
+        <link rel="icon" type ="image/x-icon" href="#{resource['images/Way1.png']}"/>
         <title>Login</title>
     </h:head>
     <h:body>
