can view tenant accounts individually

--- a/EmployeeLogin/web/employeeProfileEdit.xhtml
+++ b/EmployeeLogin/web/employeeProfileEdit.xhtml
@@ -21,7 +21,7 @@
                 
                 <h:form id="form">
                     <div class="empInfo" >
-                    <h3 class="pageTitle">Edit Employee Profile Page</h3>
+                    <h3 class="pageTitle">Edit Employee Profile</h3>
                     <div class="editBox">
                     
                     <h:panelGrid class="editInfo" columns="6"> 
