--- a/EmployeeLogin/web/viewTenant.xhtml
+++ b/EmployeeLogin/web/viewTenant.xhtml
@@ -30,7 +30,7 @@
                                 
                                 <h:outputText value="Building:  " />
                                 <h:outputText value ="#{tenantViewObj.building}" />
-                                <h:outputText value ="Unit: " />
+                                <h:outputText value ="Apartment Number: " />
                                 <h:outputText value="#{tenantViewObj.aptNum}" />
                                 
                             </h:panelGrid>
