--- a/EmployeeLogin/web/units.xhtml
+++ b/EmployeeLogin/web/units.xhtml
@@ -22,21 +22,7 @@
                         <h:outputLabel value="Building" />
                         <h:selectOneMenu id="searchUnitBuild" value="#{unit.unitBuildSearch}">
                             <f:selectItem itemValue=""/>
-                            <f:selectItem itemValue="Suncrest Grove" />
-                            <f:selectItem itemValue="Hidden Palms"/>
-                            <f:selectItem itemValue="Bayside Heights"/>
-                            <f:selectItem itemValue="Highland Square"/>
-                            <f:selectItem itemValue="Hudson Court"/>
-                            <f:selectItem itemValue="Fairway Manor"/>
-                            <f:selectItem itemValue="Primrose Heights"/>
-                            <f:selectItem itemValue="Bridgewater Park"/>
-                            <f:selectItem itemValue="Stoneridge Terrace"/>
-                            <f:selectItem itemValue="Sandy Ridge"/>
-                            <f:selectItem itemValue="Desert Estates"/>
-                            <f:selectItem itemValue="Emerald Springs"/>
-                            <f:selectItem itemValue="Fairview Villa"/>
-                            <f:selectItem itemValue="Broadview Terrace"/>
-                            <f:selectItem itemValue="Woodland Hills"/>
+                            <f:selectItems value="#{unit.viewAllBuildingNames()}" />
                         </h:selectOneMenu>
                         <h:outputLabel value="Search By:" />
                         <h:selectOneMenu id="searchCriteria" value="#{unit.vacancy}">
@@ -76,8 +62,8 @@
                         <h:commandLink value="#{unitObj.unitRent}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
                     </h:column>
                     <h:column> 
-                        <f:facet name="header">Tenant ID</f:facet>
-                        <h:commandLink value="#{unitObj.unitTenantID}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
+                        <f:facet name="header">Tenant Name</f:facet>
+                        <h:commandLink value="#{unitObj.unitTenLastName}, #{unitObj.unitTenFirstName}" action="#{unit.viewUnitRecord(unitObj.unitID)}" class="table-link"/>
                     </h:column>
                     
                 </h:dataTable>
