can create new record

--- a/EmployeeLogin/web/viewAccount.xhtml
+++ b/EmployeeLogin/web/viewAccount.xhtml
@@ -28,6 +28,7 @@
                         </h:panelGrid>
                         <div class="edit">    
                                 <h:commandButton value="Edit Account Information" action="editAccount" />
+                                <h:commandButton value="Add Record" action="createRecord" />
                         </div>
                         <h:outputLabel value="Search By:" />
                         <h:selectOneMenu id="searchRecCrit" value="#{record.searchRecCrit}" required="true" requiredMessage="Search Criteria is required">
