--- a/EmployeeLogin/web/createRecord.xhtml
+++ b/EmployeeLogin/web/createRecord.xhtml
@@ -30,10 +30,10 @@
                     </h:panelGrid>
                     <h:panelGrid class="editInfo" columns="4">
                         <h:outputText value="Record Amount:  " />
-                        <h:inputText id="recNewAmount" value ="#{record.recordAmount}" required = "true" requiredMessage="Amount is required"
+                        <h:inputText id="recNewAmount" value ="#{record.entryAmount}" required = "true" requiredMessage="Amount is required"
                                      validatorMessage="Please only digits for amount">
                             
-                            <f:validateRegex pattern="[0-9]+"/>
+                            <f:convertNumber />
                         </h:inputText> 
                         <h:outputText value="Is it credit? (enter NO for debit):  " />
                         <h:selectOneMenu id="recNewIsCred" value ="#{record.recordIsCredit}" required = "true" requiredMessage="'Is it Credit?' is required">
@@ -53,7 +53,7 @@
                         <h:outputText value="Invoice Number:  " />
                         <h:inputText id="recNewInv" value="#{record.recordInvNum}" 
                                      validatorMessage="Please enter Invoice Number using alphabetical letters and/or numbers" size="12">
-                            <f:validateRegex pattern="[A-Za-z0-9]+"/>
+                            <f:validateRegex pattern="^[a-zA-Z0-9]+$"/>
                         </h:inputText>
                                                  
                         <h:outputText value="Tenant ID:  " />
