--- a/EmployeeLogin/web/editRecord.xhtml
+++ b/EmployeeLogin/web/editRecord.xhtml
@@ -77,7 +77,9 @@
                         <h:message for="recObjAccount"/>
                         
                         </h:panelGrid>
-                    <h:commandButton value="Submit" action="#{record.updateRecordDetails(recViewObj)}" />
+                    <h:commandButton value="Submit" action="#{record.updateRecordDetails(recViewObj)}" class="confirmUpdate" />
+                    <h:commandButton value="Undo Changes" type="reset" />
+                    <h:commandButton onclick="history.back(); return false;" value="Cancel"/>
                     </div>
                     </div>   
                 </h:form>
