--- a/EmployeeLogin/web/employeePasswordEdit.xhtml
+++ b/EmployeeLogin/web/employeePasswordEdit.xhtml
@@ -42,7 +42,8 @@
                         <h:message for="confirm" style="color:red;" />     
                         
                         <h:panelGroup />
-                        <h:commandButton value="Update" action="#{employee.updatePassword}" />
+                        <h:commandButton value="Update" action="#{employee.updatePassword}" class="confirmUpdate"/>
+                        <h:commandButton onclick="history.back(); return false;" value="Cancel"/>
                                            
                     </h:panelGrid>
                     </div>
