--- a/EmployeeLogin/web/viewAccount.xhtml
+++ b/EmployeeLogin/web/viewAccount.xhtml
@@ -13,6 +13,8 @@
             <ui:define name="content">
                 
                 <h:form>
+                	<br/>
+                	<h:commandLink value="Back to Accounts" action="/accounts.xhtml?faces-redirect=true" />
                     <h3 class="pageTitle">Account Profile</h3>
                     <div id="profileBox">
                         <h:panelGrid class="info" columns="2">
@@ -29,6 +31,11 @@
                         <div class="edit">    
                                 <h:commandButton value="Edit Account Information" action="editAccount" />
                                 <h:commandButton value="Add Record" action="createRecord" />
+                        </div>
+                        <br/><br/>
+                        <div class="delete">    
+                                <h:commandButton value="Delete Account" action="#{account.deleteAccount(accViewObj)}" class="confirmAccount" />
+                                
                         </div>
                         <h:panelGrid></h:panelGrid>
                         <br/><br/>
