made general ledger and late fee button/method

--- a/EmployeeLogin/web/employeeProfile.xhtml
+++ b/EmployeeLogin/web/employeeProfile.xhtml
@@ -17,7 +17,7 @@
                 <h:form>
                     <div class="empInfo">
                         <h3 class="pageTitle">Employee Profile Page</h3>
-                        <div id="profileBox">
+                        <div class="profileBox">
                             <h:panelGrid class="info" columns="4">
                                 
                                 <h:outputText value="Name:  " />
