--- a/EmployeeLogin/web/viewRecord.xhtml
+++ b/EmployeeLogin/web/viewRecord.xhtml
@@ -16,7 +16,7 @@
                 	
                     <div class="empInfo">
                         <h3 class="pageTitle">Record Information</h3>
-                        <div id="profileBox">
+                        <div class="profileBox">
                             <h:panelGrid class="info" columns="2">
                                 
                                 <h:outputText value="Record Name:  " />
