--- a/EmployeeLogin/web/viewUnit.xhtml
+++ b/EmployeeLogin/web/viewUnit.xhtml
@@ -17,7 +17,7 @@
                 	<h:commandLink value="Back to Units" action="/units.xhtml?faces-redirect=true" />
                     <div class="empInfo">
                         <h3 class="pageTitle">Unit Profile</h3>
-                        <div id="profileBox">
+                        <div class="profileBox">
                             <h:panelGrid class="info" columns="2">
                                 
                                 <h:outputText value="Unit ID:  " />
