--- a/EmployeeLogin/web/viewAccount.xhtml
+++ b/EmployeeLogin/web/viewAccount.xhtml
@@ -16,7 +16,7 @@
                 	<br/>
                 	<h:commandLink value="Back to Accounts" action="/accounts.xhtml?faces-redirect=true" />
                     <h3 class="pageTitle">Account Profile</h3>
-                    <div id="profileBox">
+                    <div class="profileBox">
                         <h:panelGrid class="info" columns="2">
                                 
                             <h:outputText value="Account Name:  " />
