--- a/TenantPortal/WebContent/TenantMaintenanceConfirmatino.xhtml
+++ b/TenantPortal/WebContent/TenantMaintenanceConfirmatino.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-	<title>Payment Confirmation</title>
+	<title>Maintenance Confirmation</title>
 </h:head>
 <body>
 
